--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHP-mI-kKS" userLabel="EquipmentHelmet" customClass="LCKItemButton">
-                                <rect key="frame" x="350" y="50" width="50" height="50"/>
+                                <rect key="frame" x="350" y="45" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="MzF-zN-CcS"/>
                                     <constraint firstAttribute="width" constant="50" id="hYS-2f-oBk"/>
@@ -111,7 +111,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yya-Wz-xsE" userLabel="EquipmentRightHand" customClass="LCKItemButton">
-                                <rect key="frame" x="170" y="220" width="50" height="50"/>
+                                <rect key="frame" x="170" y="200" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Im8-au-mwd"/>
                                     <constraint firstAttribute="width" constant="50" id="LOx-5C-E1F"/>
@@ -124,7 +124,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ar4-85-oMt" userLabel="EquipmentAccessory1" customClass="LCKItemButton">
-                                <rect key="frame" x="170" y="50" width="50" height="50"/>
+                                <rect key="frame" x="170" y="45" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="HT7-MD-qpk"/>
                                     <constraint firstAttribute="width" constant="50" id="z0h-2b-vvU"/>
@@ -137,7 +137,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z5l-dZ-bU0" userLabel="EquipmentAccessory2" customClass="LCKItemButton">
-                                <rect key="frame" x="170" y="113" width="50" height="50"/>
+                                <rect key="frame" x="170" y="108" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="F5F-5a-KBu"/>
                                     <constraint firstAttribute="height" constant="50" id="FS9-pD-2YI"/>
@@ -163,7 +163,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="675-xe-31g" userLabel="EquipmentLeftHand" customClass="LCKItemButton">
-                                <rect key="frame" x="380" y="220" width="50" height="50"/>
+                                <rect key="frame" x="380" y="200" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="PA5-OQ-vRO"/>
                                     <constraint firstAttribute="height" constant="50" id="bO1-mi-Fil"/>
@@ -210,20 +210,20 @@
                                 </connections>
                             </collectionView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heartIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="ELO-qo-6rC" userLabel="Heart Image Icon">
-                                <rect key="frame" x="372" y="330" width="65" height="65"/>
+                                <rect key="frame" x="372" y="300" width="65" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="HJV-mp-PEl"/>
                                     <constraint firstAttribute="height" constant="65" id="soW-MV-Rbn"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cK2-iC-meJ" userLabel="HealthLabel">
-                                <rect key="frame" x="384" y="327" width="42" height="65"/>
+                                <rect key="frame" x="384" y="297" width="42" height="65"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Is3-ZS-0SK" userLabel="Increase Health Button">
-                                <rect key="frame" x="382" y="296" width="44" height="44"/>
+                                <rect key="frame" x="382" y="266" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="Lia-5M-3rK"/>
                                     <constraint firstAttribute="height" constant="44" id="mh9-pe-hUN"/>
@@ -234,7 +234,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IG2-I5-mWV" userLabel="Decrease Health Button">
-                                <rect key="frame" x="382" y="385" width="44" height="44"/>
+                                <rect key="frame" x="382" y="355" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="0kq-wt-H3j"/>
                                     <constraint firstAttribute="width" constant="44" id="Tz4-Al-U2Y"/>
@@ -247,24 +247,24 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ELO-qo-6rC" firstAttribute="top" secondItem="675-xe-31g" secondAttribute="bottom" constant="60" id="1xw-Pt-Pkv"/>
+                            <constraint firstItem="ELO-qo-6rC" firstAttribute="top" secondItem="675-xe-31g" secondAttribute="bottom" constant="50" id="1xw-Pt-Pkv"/>
                             <constraint firstItem="z5l-dZ-bU0" firstAttribute="top" secondItem="ar4-85-oMt" secondAttribute="bottom" constant="13" id="2EY-W0-mw5"/>
                             <constraint firstItem="EmM-eE-XlB" firstAttribute="width" secondItem="buv-6s-AS3" secondAttribute="width" id="2kl-dA-S2O"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="centerX" secondItem="7D5-tH-Ejn" secondAttribute="centerX" id="4LY-CZ-oGP"/>
                             <constraint firstItem="oab-Ny-zTp" firstAttribute="top" secondItem="U3k-ex-baV" secondAttribute="bottom" constant="20" id="67d-qY-hUO"/>
-                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="ar4-85-oMt" secondAttribute="top" id="7XB-2j-1sR"/>
+                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="ar4-85-oMt" secondAttribute="top" constant="5" id="7XB-2j-1sR"/>
                             <constraint firstItem="Tfq-jD-en0" firstAttribute="centerX" secondItem="U3k-ex-baV" secondAttribute="centerX" id="9D2-ZC-alt"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="leading" secondItem="yya-Wz-xsE" secondAttribute="trailing" constant="10" id="BrD-32-aHq"/>
                             <constraint firstItem="kOx-KH-9Dv" firstAttribute="top" secondItem="EmM-eE-XlB" secondAttribute="bottom" id="Ejn-og-3k6"/>
                             <constraint firstItem="EmM-eE-XlB" firstAttribute="top" secondItem="oab-Ny-zTp" secondAttribute="bottom" constant="10" id="G2t-yb-TQW"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="leading" secondItem="z5l-dZ-bU0" secondAttribute="trailing" constant="10" id="GTa-dd-j30"/>
-                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="675-xe-31g" secondAttribute="bottom" constant="-220" id="Grb-sQ-DQc"/>
+                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="675-xe-31g" secondAttribute="bottom" constant="-200" id="Grb-sQ-DQc"/>
                             <constraint firstAttribute="centerX" secondItem="oab-Ny-zTp" secondAttribute="centerX" id="HvU-LF-uNl"/>
                             <constraint firstItem="675-xe-31g" firstAttribute="centerX" secondItem="ELO-qo-6rC" secondAttribute="centerX" id="K7u-3e-i0a"/>
                             <constraint firstItem="cK2-iC-meJ" firstAttribute="centerX" secondItem="ELO-qo-6rC" secondAttribute="centerX" id="MYz-dF-S7y"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="7D5-tH-Ejn" secondAttribute="top" constant="-70" id="PJy-6M-2lL"/>
                             <constraint firstItem="cK2-iC-meJ" firstAttribute="height" secondItem="ELO-qo-6rC" secondAttribute="height" id="SYG-5L-liX"/>
-                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="IHP-mI-kKS" secondAttribute="top" id="WTX-yI-MNR"/>
+                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="IHP-mI-kKS" secondAttribute="top" constant="5" id="WTX-yI-MNR"/>
                             <constraint firstAttribute="centerX" secondItem="U3k-ex-baV" secondAttribute="centerX" id="Xhv-Z6-L8Z"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="leading" secondItem="ar4-85-oMt" secondAttribute="trailing" constant="10" id="Zqw-yg-0JJ"/>
                             <constraint firstAttribute="centerX" secondItem="EmM-eE-XlB" secondAttribute="centerX" id="bx9-ma-b99"/>
@@ -275,7 +275,7 @@
                             <constraint firstItem="cK2-iC-meJ" firstAttribute="height" secondItem="ELO-qo-6rC" secondAttribute="height" id="j5N-bw-BYq"/>
                             <constraint firstItem="ELO-qo-6rC" firstAttribute="top" secondItem="Is3-ZS-0SK" secondAttribute="bottom" constant="-10" id="kOg-2X-7Q2"/>
                             <constraint firstItem="ELO-qo-6rC" firstAttribute="centerX" secondItem="IG2-I5-mWV" secondAttribute="centerX" id="lN8-8v-Sgm"/>
-                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="yya-Wz-xsE" secondAttribute="bottom" constant="-220" id="pS7-0R-4Xp"/>
+                            <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="yya-Wz-xsE" secondAttribute="bottom" constant="-200" id="pS7-0R-4Xp"/>
                             <constraint firstItem="675-xe-31g" firstAttribute="leading" secondItem="U3k-ex-baV" secondAttribute="trailing" constant="10" id="qAP-0L-jD0"/>
                             <constraint firstItem="Is3-ZS-0SK" firstAttribute="centerX" secondItem="ELO-qo-6rC" secondAttribute="centerX" id="sX3-pY-DDC"/>
                             <constraint firstAttribute="width" secondItem="oab-Ny-zTp" secondAttribute="width" id="sdS-dV-Z2J"/>
