--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -362,13 +362,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oTE-yr-HDC" userLabel="Description Label">
-                                <rect key="frame" x="26" y="211.5" width="548" height="20.5"/>
+                                <rect key="frame" x="26" y="211" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flavor Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qd-La-zrm" userLabel="Flavor Text Label">
-                                <rect key="frame" x="26" y="539.5" width="548" height="20.5"/>
+                                <rect key="frame" x="26" y="539" width="548" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -420,6 +420,7 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="VCk-r1-lcm"/>
+                                <exclude reference="XJT-kJ-S2X"/>
                             </mask>
                         </variation>
                     </view>
